2007-08-09  Inge Wallin  <inge@lysator.liu.se>

	Rename utils.h to global.h since it better describes what it is.
	* src/lib/utils.h: rename to global.h
	* GridMap.cpp,          GridMap.h,
	* MarbleModel.cpp,      MarbleModel.h,
	* MarbleWidget.cpp,
	* MarbleWidgetInputHandler.cpp,
	* placemarkpainter.cpp,
	* texcolorizer.cpp,
	* vectormap.cpp,        vectormap.h:
	include global.h instead of utils.h
	* src/lib/CMakeLists.txt: Add global.h to include files.

2007-08-09  Torsten Rahn  <rahn@kde.org>

    - Fixed CID 4021:
      line 56: HttpJob  *job = new HttpJob();
      if acceptJob (line 63) returns false, job is leaked

2007-08-09  Inge Wallin  <inge@lysator.liu.se>

	Start of a unification of the projections.
	* src/lib/vectormap.cpp (createFromPntMap): Remove a difference
	between flat and mercator projections
	* src/lib/vectormap.cpp: Cleaning
	* src/lib/GeoPolygon.cpp: Cleaning

2007-08-09  Torsten Rahn  <rahn@kde.org>

    - Introduce support for Radian/Degree in MarbleWidget.

    - Patch by Tim Sutton of QGIS fame: Make katlasdirs.h
	use MARBLE_DATA_PATH / CMAKE_INSTALL_PREFIX

2007-08-09  Torsten Rahn  <rahn@kde.org>

    - Ladies and gentlemen, we introduce the 
	International Date Line.
      Cross it from east to the west to enjoy 
      a peek 24-hours ahead into the future of KDE 4.

     Our IDL includes the Kiribati line.

     More info at: 
http://en.wikipedia.org/wiki/International_Dateline

     * tools/dateline/dateline.pro
     * tools/dateline/dateline.cpp
     * data/mwdbii/DATELINE.PNT
     * data/CMakeLists.txt

2007-08-09  Torsten Rahn  <rahn@kde.org>

    - The guy's name is not Marcator but
	http://en.wikipedia.org/wiki/Gerardus_Mercator
	The same is true for the projection.

	Corrected Projections->Projection
	as it's not ints, bools, etc. either ;-)
    - Some changes related to the dateline.

    * src/lib/ViewParams.h
    * src/lib/vectorcomposer.cpp

2007-08-08  Murad Tagirov  <tmurad@gmail.com>
